- Fixed Twitter/RSS/ATOM links being misaligned by putting them in the same   div as the "Submit a news article" link instead of having them positioned   absolutely. - Added Tron-themed menorah to appear on the login screen.

--- a/styles/default/news/news.css
+++ b/styles/default/news/news.css
@@ -33,7 +33,7 @@
 	font-size: 12pt;
 	font-weight: bold;
 	float: right;
-	margin-top: 6px;
+	margin-top: 0px;
 	margin-right: 2px;
 	padding: 2px;
 }
